# my_application

./: CMakeLists.txt  README.md  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  helper.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  openglwindow.cpp  openglwindow.hpp  settings_window.cpp  settings_window.hpp  settings_window.ui
game/core/: gameclock.cpp  gameclock.hpp  gamecore.cpp  gamecore.hpp  gameloopmanager.cpp  gameloopmanager.hpp
game/entity/: myentity.cpp  myentity.hpp  player.cpp  player.hpp
game/inventory/: inventory.cpp  inventory.hpp  inventorymanager.cpp  inventorymanager.hpp  item.cpp  item.hpp
glWindow/gl/: objectloader.cpp  objectloader.hpp
glWindow/gl/entity/: entitybase.cpp  entitybase.hpp
glWindow/gl/model/: basemodel.cpp  basemodel.hpp
glWindow/gl/shaders/: SimpleFragmentShader.fragmentshader
glWindow/glWindowCore/: controls.cpp  controls.hpp  openglwindow.cpp  openglwindow.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  windowcreation.cpp  windowcreation.hpp  windowmanager.cpp  windowmanager.hpp
ui/: mainwindow.ui
